# rusty-openweathermap-library

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Feedback.md  LICENSE  README.md
.github/workflows/: ci.yml
schemas/: clouds.schema.json  coord.schema.json  currentWeatherData.schema.json  location.schema.json  main.schema.json  sys.schema.json  weather-condition.schema.json  weather-icon.schema.json  weather-icons.schema.json  weather.schema.json  wind.schema.json
src/: lib.rs
src/location/: client.rs  mod.rs  types.rs
src/weather/: client.rs  mod.rs  types.rs
