[package]
name = "weather_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
serde_json = "1.0.140"
