[package]
name = "openweathermap_lib"
version = "0.1.0-pre.4"
edition = "2021"
authors = ["Tony Markham"]
description = "A Rust library for interacting with the OpenWeatherMap API"
repository = "https://github.com/tonymarkham/rusty-openweathermap-library"
license = "MIT"
keywords = ["weather", "openweathermap", "api", "client"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
serde_json = "1.0.140"

[dev-dependencies]
mockall = "0.12"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
